# MMad

include/: ModularMadness.h  module.h  moduleOperations.h  processor.h
src/: CMakeLists.txt  main.cpp  module.cpp  moduleOperations.cpp  processor.cpp
tests/: CMakeLists.txt
tests/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake
tests/googletest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
tests/googletest/googlemock/gmock.dir/Debug/gmock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.write.1.tlog  gmock.lastbuildstate
tests/googletest/googlemock/gmock_main.dir/Debug/gmock_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog
tests/googletest/googlemock/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake
tests/googletest/googlemock/gtest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
